src/test/resources/tests/typeError/returnInRun.qg

init {
    out = 1
}

run {
    return 2
}

input(a,b) true